k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notes
  labels:
    app: notes
spec:
  replicas: 5
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "notes"
        vault.hashicorp.com/agent-inject-secret-db: "secret/data/notes"
    spec:
      serviceAccountName: notes
      containers:
        - name: notes
          image: ezvacss/notes:1.2.0 # {"$imagepolicy": "flux-system:notes"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
