k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes
spec:
  type: ClusterIP
  selector:
    app: notes
  ports:
    - port: 8080
      targetPort: 8080
